force-app/main/default/objects/Pivotal_Contact__c/Pivotal_Contact__c.object-meta.xml
<CustomObject>
    <description>Helps tracking of pivotal individuals associated with the job application, such as hiring managers, recruiters, and other relevant employees.</description>
    <label>Pivotal Contact</label>
    <nameField>
        <displayFormat>PC# {0}</displayFormat>
        <label>Pivotal Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pivotal Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>