force-app/main/default/objects/Pivotal_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The Contact associated with the job application. This could be the hiring manager, recruiter, or other relevant employee.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relates to Job Applications</relationshipLabel>
    <relationshipName>Pivotal_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>