force-app/main/default/objects/Pivotal_Contact__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if this contact is the primary contact on the job application.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>